ecmascript/parser/tests/typescript-errors/tsc/parser/ecmascript5/RegressionTests/parser566700/input.ts.stderr
error: Parenthesized expression cannot be empty
 --> $DIR/tests/typescript-errors/tsc/parser/ecmascript5/RegressionTests/parser566700/input.ts:1:9
  |
1 | var v = ()({});
  |         ^^

